--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ CLARIFAI_PAT=018ff94239a246daa54e560dbcfc09a5
 # NUTRITIONIX_API_KEY=23eaf48ac663dbd8009f204478fba145
 
 CALORIENINJA_API_KEY=I1YpEh7/aZbUWQi9o4J+sQ==404ZqURsRzSesf3S
+OPENAI_API_KEY=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
