--- a/dietplanner/package.json
+++ b/dietplanner/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.0.13",
     "@tailwindcss/vite": "^4.0.13",
     "chart.js": "^4.4.8",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
